<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventas">

    <TextView
        android:id="@+id/tvVenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Inv"
        android:textColor="@color/Negro"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvProductos"
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/Amarillo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVenta" />

    <Button
        android:id="@+id/btnSalir3"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/Salir"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/btnVentas1"
        app:layout_constraintTop_toBottomOf="@+id/lvProductos" />

    <Button
        android:id="@+id/btnVentas1"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/Ven"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvProductos" />

</androidx.constraintlayout.widget.ConstraintLayout>